--- a/css/subpage.css
+++ b/css/subpage.css
@@ -20,5 +20,8 @@
     max-width: var(--subpage-max-width);
     margin-left: auto;
     margin-right: auto;
+    padding: 3rem 2rem;
+    display: grid;
+    gap: 4rem;
   }
 }
