fix: fikset sticky ved å bytte til min-height: 100vh på body

--- a/css/subpage.css
+++ b/css/subpage.css
@@ -11,12 +11,8 @@
 }
 
 @layer common {
-  html,
   body {
-    height: 100%;
-  }
-
-  body {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
   }
