--- a/css/retning.css
+++ b/css/retning.css
@@ -1,10 +1,25 @@
 @layer component {
+  :root {
+    --prinsipp-ikon-padding: 12px;
+  }
+
+  /* All web components must have display value */
+  tr-retning-header,
+  tr-prinsipper,
+  tr-prinsipper-liste,
+  tr-prinsipp,
+  tr-prinsipp-subtitle,
+  tr-prinsipp-bilde,
+  tr-prinsipp-innhold {
+    display: block;
+  }
+
   tr-prinsipper {
     container: prinsipper / inline-size;
 
     > h2 {
-      padding-bottom: 1rem;
-      margin-bottom: 1rem;
+      padding-bottom: 1.5rem;
+      margin-bottom: 1.5rem;
       border-bottom: 1px solid var(--faded-separator, #c9cee4);
     }
 
@@ -14,7 +29,7 @@
       padding: 0;
 
       tr-prinsipp {
-        column-gap: 4rem;
+        column-gap: 2rem;
         row-gap: 1rem;
 
         &:not(:last-child) {
@@ -27,6 +42,7 @@
           display: flex;
           flex-wrap: wrap;
           justify-content: space-between;
+          padding-left: var(--prinsipp-ikon-padding);
         }
 
         @container prinsipper (max-width: 700px) {
@@ -34,11 +50,28 @@
         }
       }
 
+      h3 {
+        font-size: 1.4rem;
+      }
+
+      tr-prinsipp-subtitle {
+        font-size: 1.2rem;
+        font-weight: normal;
+      }
+
       tr-prinsipp-bilde {
         display: grid;
         gap: 1rem;
         height: fit-content;
-        flex-basis: 16rem;
+        flex-basis: 6rem;
+
+        img {
+          height: 95px;
+
+          &.ikon-med-padding {
+            margin: calc(var(--prinsipp-ikon-padding) * -1);
+          }
+        }
       }
 
       tr-prinsipp-innhold {
@@ -48,10 +81,6 @@
           display: flex;
           align-items: center;
           gap: 0.75rem;
-        }
-
-        @container prinsipper (min-width: 700px) {
-          padding-top: 1rem;
         }
       }
     }
