refactor: font størrelse for underoverskrift (h2) flyttet til css fil

--- a/css/retning.css
+++ b/css/retning.css
@@ -49,6 +49,10 @@
       font-size: 2em;
     }
 
+    h2 {
+      font-size: 1.4rem;
+    }
+
     tr-retning-header-content {
       display: flex;
       flex-direction: column;
