fix: verktøykasser fra Miro for alle retninger

--- a/css/verktoykasse.css
+++ b/css/verktoykasse.css
@@ -32,5 +32,12 @@
         font-size: 1.75rem;
       }
     }
+
+    tr-verktoykasse-body {
+      h2 {
+        font-size: 1rem;
+        font-weight: 500;
+      }
+    }
   }
 }
