--- a/css/common.css
+++ b/css/common.css
@@ -1,15 +1,5 @@
 @layer reset, common, component, utility;
 
-:root {
-  --box-background: white;
-  --box-padding: 2rem;
-  --box-radius: 1rem;
-  --faded-separator: #c9cee4;
-  --color-darkblue-500: #00263e;
-  --color-lightblue-300: #d0e2f3;
-  --color-brightyellow: #fdda25;
-}
-
 @layer utility {
   .tr-box-background {
     background-color: var(--box-background);
@@ -25,12 +15,26 @@
 }
 
 @layer common {
+  :root {
+    --page-max-width: 1096px;
+    --box-background: white;
+    --box-padding: 2rem;
+    --box-radius: 1rem;
+    --faded-separator: #c9cee4;
+    --color-darkblue-500: #00263e;
+    --color-lightblue-300: #d0e2f3;
+    --color-brightyellow: #fdda25;
+  }
+
   body {
     font-family: Roboto;
   }
 
   main {
     container: main / inline-size;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: var(--page-max-width);
   }
 
   /* All web components must have display value */
